# i3e-d3

./: LICENSE  README.md
3irobotics-delta2a-sdk/: .gitignore
delta_lidar/: README.md
drivers/delta_lidar/launch/: delta_lidar.launch
drivers/delta_lidar/src/: node.cpp
drivers/i2c_device_ros/: CMakeLists.txt  README.md  package.xml
drivers/i2c_device_ros/doc/: Doxyfile
drivers/i2c_device_ros/src/: i2c_device.cpp
i3e-d3_bringup/: CMakeLists.txt  package.xml
i3e-d3_bringup/launch/: i3e-d3_calibration.launch  i3e-d3_core.launch  i3e-d3_imu.launch  i3e-d3_lidar.launch  i3e-d3_robot.launch  i3e-d3_rpicamera.launch
i3e-d3_bringup/src/: odometry_publisher.cpp  velocity_publisher.cpp
i3e-d3_control/: CMakeLists.txt  package.xml
i3e-d3_control/config/: control.yaml  ekf_localization.yaml  teleop_joy.yaml  twist_mux.yaml
i3e-d3_control/launch/: joy_config.launch  start_control.launch  start_joy_control.launch
i3e-d3_control/src/: joy_teleop.cpp
i3e-d3_description/: CMakeLists.txt  package.xml
i3e-d3_description/launch/: description.launch
i3e-d3_description/meshes/: arm.stl  base_link.dae  body.stl  caster_base.stl  caster_rot.stl  chassis.stl  face.stl  forearm.stl  hand.stl  head.stl  head_cover.stl  left_arm.dae  lidar.stl  motor.stl  neck.stl  right_arm.dae  servo.stl  shape.stl  wheel_130x60.stl  wheel_80x35.stl
i3e-d3_description/urdf/: accessories.urdf.xacro  arm.urdf.xacro  caster.urdf.xacro  decorations.urdf.xacro  head.urdf.xacro  i3e-d3.urdf.xacro  i3e-d3.xacro.urdf  i3e-d3_open_manipulator.urdf.xacro  materials.urdf.xacro  shape.urdf.xacro  shape_manipulator.urdf.xacro  wheel.urdf.xacro
i3e-d3_gazebo/: CMakeLists.txt  package.xml
i3e-d3_gazebo/launch/: i3e-d3_empty_world.launch  i3e-d3_jackal_world.launch  i3e-d3_playpen.launch  i3e-d3_willowgarage.launch  i3e-d3_world.launch  playpen.launch  robots.launch  shape_empty_world.launch  spawn_i3e-d3.launch  spawn_shape.launch
i3e-d3_gazebo/worlds/: clearpath_playpen.world  d3_world.world  i3e-d3_world.world  jackal_race.world
i3e-d3_launchs/: CMakeLists.txt  package.xml
i3e-d3_launchs/launch/: exploration.launch  gmapping_joy.launch  gmapping_nav.launch  hector_mapping_joy.launch  hector_mapping_nav.launch  joy_control.launch  main.launch  mapping_nav.launch  mapping_teleop.launch  move_base.launch  navigation.launch  teleoperation.launch  template.launch
i3e-d3_manipulation/: CMakeLists.txt  package.xml
i3e-d3_manipulation/launch/: open_manipulator_controller.launch  open_manipulator_gazebo.launch
i3e-d3_manipulation/urdf/: i3e-d3_open_manipulator.urdf.xacro  open_manipulator.gazebo.xacro  open_manipulator.urdf.xacro
i3e-d3_navigation/: CMakeLists.txt  package.xml
i3e-d3_navigation/config/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  gmapping_config.yaml  hector.rviz  local_costmap_params.yaml  move_base_params.yaml  teb_local_planner_params.yaml
i3e-d3_navigation/launch/: amcl.launch  explore.launch  gmapping.launch  hector_mapping.launch  move_base.launch  teb_planner.launch  tutorial.launch
i3e-d3_robots/: CMakeLists.txt  package.xml
i3e-d3_robots/launch/: joy_control.launch  navigation.launch  robots.launch
i3e-d3_tests/: CMakeLists.txt  package.xml
i3e-d3_tests/launch/: hector_mapping.launch  localization.launch  mapping.launch  move_base.launch  move_circles.launch  teb_planner.launch  tutorial.launch
i3e-d3_tests/src/: circles.cpp
i3e-d3_viz/: CMakeLists.txt  package.xml
i3e-d3_viz/launch/: view_robot.launch
i3e-d3_viz/rviz/: i3e_d3.rviz  navigation.rviz  navigation_teb.rviz  teb.rviz  teb2.rviz  tf_i3e_d3.rviz
i3e_d3_msgs/: CMakeLists.txt  package.xml
i3e_d3_msgs/srv/: GetMotorsState.srv  SetMotorsState.srv
i3ed3_description/: CMakeLists.txt  package.xml
mpu6050/src/: mpu6050_node.cpp
