<?xml version="1.0"?>
<package format="2">
  <name>i3e-d3_control</name>
  <version>1.0.0</version>
  <description>The i3e-d3 control package</description>

  <author email="felipemohr@ieee.org">Felipe Mohr</author>
  <maintainer email="felipemohr@ieee.org">Felipe Mohr</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/rascimatec/i3e-d3</url>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>i3e-d3_description</depend>
  <depend>joint_state_controller</depend>
  <depend>joint_trajectory_controller</depend>
  <depend>diff_drive_controller</depend>
  <!--depend>multimaster_launch</!depend-->
  <depend>robot_localization</depend>
  <depend>rostopic</depend>
  <depend>roscpp</depend>
  <depend>joy</depend>
  <depend>controller_manager</depend>
  <depend>teleop_twist_joy</depend>
  <depend>twist_mux</depend>

  <export>
  </export>
</package>
