<?xml version="1.0"?>
<package format="2">
  <name>i3e-d3_description</name>
  <version>1.0.0</version>
  <description>The i3e-d3 description package</description>

  <author email="felipemohr@ieee.org">Felipe Mohr</author>
  <maintainer email="felipemohr@ieee.org">Felipe Mohr</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/rascimatec/i3e-d3</url>  

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <depend>urdf</depend>
  <depend>xacro</depend>

  <export>
  </export>
</package>
