<?xml version="1.0"?>
<package format="2">
  <name>i3e-d3_gazebo</name>
  <version>1.0.0</version>
  <description>The i3e-d3 gazebo package</description>

  <author email="felipemohr@ieee.org">Felipe Mohr</author>
  <maintainer email="felipemohr@ieee.org">Felipe Mohr</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/rascimatec/i3e-d3</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <depend>controller_manager</depend>
  <depend>gazebo_plugins</depend>
  <depend>gazebo_ros</depend>
  <depend>gazebo_ros_control</depend>
  <depend>i3e-d3_control</depend>
  <depend>i3e-d3_description</depend>
  <depend>rostopic</depend>

  <export>
  </export>
</package>
