<?xml version="1.0"?>
<package format="2">
  <name>i3e-d3_navigation</name>
  <version>1.0.0</version>
  <description>The i3e-d3 navigation package</description>

  <author email="felipemohr@ieee.org">Felipe Mohr</author>
  <maintainer email="felipemohr@ieee.org">Felipe Mohr</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/rascimatec/i3e-d3</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <depend>amcl</depend>
  <depend>gmapping</depend>
  <depend>map_server</depend>
  <depend>move_base</depend>
  <depend>navfn</depend>
  <depend>base_local_planner</depend>
  <depend>dwa_local_planner</depend>
  <depend>teb_local_planner</depend>
  
  <export>
  </export>
</package>
