<?xml version="1.0"?>
<package format="2">
  <name>i3e-d3_viz</name>
  <version>1.0.0</version>
  <description>The i3e-d3 visualization package</description>

  <author email="felipemohr@ieee.org">Felipe Mohr</author>
  <maintainer email="felipemohr@ieee.org">Felipe Mohr</maintainer>

  <license>MIT</license>

  <url type="repository">https://github.com/rascimatec/i3e-d3</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <depend>i3e-d3_description</depend>
  <depend>joint_state_publisher</depend>
  <depend>robot_state_publisher</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>rviz</depend>
  <depend>rviz_imu_plugin</depend>

  <export>
  </export>
</package>
