<?xml version="1.0"?>
<package format="2">
  <name>i2c_device_ros</name>
  <version>0.0.0</version>
  <description>C++ library to read/write from/to I2C devices</description>

  <maintainer email="mateusmenezes95@gmail.com">Mateus Menezes</maintainer>
  <author email="mateusmenezes95@gmail.com">Mateus Menezes</author>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>
  <doc_depend>doxygen</doc_depend>
</package>
